# buildwars

./: .gitignore  CHANGELIST.md  Cargo.toml  README.md
.github/workflows/: release.yml  rust.yml
src/: armory.rs  aw2.rs  chatlink.rs  config.rs  frontmatter.rs  lib.rs  main.rs
tests/: api_test.rs  chatlink.rs  classes.rs  gear.rs
