[package]
name = "buildwars"
version = "0.3.2"
edition = "2021"

[dependencies]
gw2lib = { version = "3.0.0", path = "../gw2lib/http", features = ["blocking"] }
gw2lib-keys = { version = "0.1.0", path = "../gw2lib/keys" }
gw2lib-model = { version = "2.1.4", path = "../gw2lib/model" }
itertools = "0.12.1"

