[package]
name = "buildwars"
version = "0.4.1"
edition = "2021"

[dependencies]
chatr = { version = "0.6.0", path = "../chatr" }
chrono = "0.4.35"
gw2lib = { version = "3.0.0", git = "https://github.com/berdandy/gw2lib", branch = "ranger_pets_endpoint", features = ["blocking"] }
gw2lib-keys = { version = "0.1.0", git = "https://github.com/berdandy/gw2lib", branch = "ranger_pets_endpoint" }
gw2lib-model = { version = "2.1.4", git = "https://github.com/berdandy/gw2lib", branch = "ranger_pets_endpoint" }
itertools = "0.12.1"
