[package]
name = "buildwars"
version = "0.4.2"
edition = "2021"
repository = "https://github.com/berdandy/buildwars"

[dependencies]
# chatr = { version = "0.6.0", path = "../chatr" }
chatr = "0.6.0"
chrono = "0.4.35"
gw2lib = { version = "3.0.0", git = "https://github.com/berdandy/gw2lib", branch = "ranger_pets_endpoint", features = ["blocking"] }
gw2lib-keys = { version = "0.1.0", git = "https://github.com/berdandy/gw2lib", branch = "ranger_pets_endpoint" }
gw2lib-model = { version = "2.1.4", git = "https://github.com/berdandy/gw2lib", branch = "ranger_pets_endpoint" }
itertools = "0.12.1"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.11.1"
# CI backends to support
ci = ["github"]
# The installers to generate for each app
installers = []
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc"]
# Publish jobs to run in CI
pr-run-mode = "plan"
